--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "qippy"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Sebastian Dominguez<joburg1035@yahoo.com>"]
+description = "A Quantum Circuits simulator library. Under development."
+readme = "README.md"
+repository = "https://github.com/SebastianDominguezC/qippy"
+keywords = ["quantum", "simulation", "qubit"]
+categories = ["Emulators", "Science"]
+license = "MIT"
 
 [dependencies]
 num-complex = "0.4.0"
