--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A Quantum Circuits simulator library. Under development."
 readme = "README.md"
 repository = "https://github.com/SebastianDominguezC/qippy"
 keywords = ["quantum", "simulation", "qubit"]
-categories = ["Emulators", "Science"]
+categories = ["simulation", "science"]
 license = "MIT"
 
 [dependencies]
